# Public/swagger.json
@@ -98,7 +98,12 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IXXXX"
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/IXXXX"
+										},
+										{}
+									]
 								}
 							}
 						}
@@ -116,6 +121,14 @@
 						"required": true,
 						"schema": {
 							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "api",
+						"required": false,
+						"schema": {
+							"type": "boolean"
 						}
 					}
 				]
@@ -193,7 +206,12 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IYYYY"
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/IYYYY"
+										},
+										{}
+									]
 								}
 							}
 						}
@@ -211,6 +229,14 @@
 						"required": true,
 						"schema": {
 							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "api",
+						"required": false,
+						"schema": {
+							"type": "boolean"
 						}
 					}
 				]
